# Multi-Source-RAG-Pipeline

./: .gitignore  README.md  app_frontend.py  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  models.py  task_manager.py
app/Embedding/: chunking.py  embedding.py  vector_store.py
app/Loaders/: document_loader.py  website_loader.py
app/Retriever/: advanced_rag.py  llm.py  rag_retriever.py
app/api/: helper_functions.py  routes.py
notebook/: document.ipynb  multi_source_pipeline.ipynb  single_source_pipeline.ipynb
