[project]
name = "multi-source-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "layoutparser[ocr,paddledetection]>=0.2.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "sentence-transformers>=5.2.0",
]
